--- a/TESTING.html
+++ b/TESTING.html
@@ -14,7 +14,8 @@
     <input id="nA" value="10" type="number" max="100" min="2">
     <button onclick="paintingA()">create labyrinth</button>
     <button onclick="clearA()">clear</button>
-    <button onclick="startA()">startLoc</button>
+    <button onclick="startA()">start point</button>
+    <button onclick="finishA()">finish point</button>
 </div>
     <canvas id="canvasA"style=" margin-top: 25px;">
     </canvas>
