--- a/TESTING.html
+++ b/TESTING.html
@@ -16,6 +16,7 @@
     <button onclick="clearA()">clear</button>
     <button onclick="clickedA('startA')">start point</button>
     <button onclick="clickedA('finishA')">finish point</button>
+    <button onclick="clickedA('impassable')">impassable point</button>
 </div>
     <canvas id="canvasA"style=" margin-top: 25px;">
     </canvas>
