--- a/TESTING.html
+++ b/TESTING.html
@@ -13,7 +13,7 @@
     N:
     <input id="nA" value="10" type="number" max="100" min="2">
     <button onclick="paintingA()">create labyrinth</button>
-    <button onclick="clearA()">clear</button>
+  <!--  <button onclick="clearA()">clear</button>  -->
     <button onclick="clickedA('startA')">start point</button>
     <button onclick="clickedA('finishA')">finish point</button>
     <button onclick="clickedA('impassable')">impassable point</button>
