--- a/TESTING.html
+++ b/TESTING.html
@@ -17,6 +17,7 @@
     <button onclick="clickedA('startA')">start point</button>
     <button onclick="clickedA('finishA')">finish point</button>
     <button onclick="clickedA('impassable')">impassable point</button>
+    <button onclick="searchA()">search path</button>
 </div>
     <canvas id="canvasA"style=" margin-top: 25px;">
     </canvas>
