--- a/TESTING.html
+++ b/TESTING.html
@@ -18,6 +18,8 @@
     <button onclick="clickedA('finishA')">finish point</button>
     <button onclick="clickedA('impassable')">impassable point</button>
     <button onclick="searchA()">search path</button>
+    timeDelay:
+    <input id="timeDelay" value="1" type="number"  min="1">
 </div>
     <canvas id="canvasA"style=" margin-top: 25px;">
     </canvas>
