--- a/TESTING.html
+++ b/TESTING.html
@@ -18,7 +18,7 @@
     <button onclick="clickedA('finishA')">finish point</button>
     <button onclick="clickedA('impassable')">impassable point</button>
     <button onclick="searchA()">search path</button>
-    timeDelay:
+    <button onclick="getTimeDelayA()">set TimeDelay</button>:
     <input id="timeDelay" value="1" type="number"  min="1">
 </div>
     <canvas id="canvasA"style=" margin-top: 25px;">
