--- a/TESTING.html
+++ b/TESTING.html
@@ -38,7 +38,9 @@
     <h1>Genetic Algorithm</h1>
     <div id="GeneticSettings" class="mSettings">
         <button onclick="clearGenetic()">reset</button>
-        <button onclick="">Calculate</button>
+        <button onclick="Calculate()">Calculate</button>
+        <button onclick="GetMutationChance()">set Mutationchance</button>:
+        <input id="Mutationchance" value="50" type="number" min="0" max="1">
     </div>
     <canvas id="canvasGeneticAlg" style=" margin-top: 25px;"></canvas>
     <h1>Ant Simulation</h1>
