--- a/TESTING.html
+++ b/TESTING.html
@@ -39,7 +39,7 @@
     <div id="GeneticSettings" class="mSettings">
         <button onclick="clearGenetic()">reset</button>
         <button onclick="Calculate()">Calculate</button> NumOfMutations:
-        <input id="NumberofMutations" value="5000" type="number" min="1">
+        <input id="NumberofMutations" value="9999999" type="number" min="1">
         <button onclick="GetMutationChance()">set Mutationchance</button>:
         <input id="Mutationchance" value="50" type="number" min="0" max="1">
     </div>
