--- a/TESTING.html
+++ b/TESTING.html
@@ -38,7 +38,7 @@
     <h1>Genetic Algorithm</h1>
     <div id="GeneticSettings" class="mSettings">
         <button onclick="clearGenetic()">reset</button>
-        <button onclick="Calculate()">Calculate</button> NumOfMutations:
+        <button onclick="Calculate()">Calculate</button> generationCount:
         <input id="NumberofMutations" value="500" type="number" min="1">
         <button onclick="GetMutationChance()">set Mutationchance</button>:
         <input id="Mutationchance" value="50" type="number" min="0" max="1">
