--- a/TESTING.html
+++ b/TESTING.html
@@ -44,7 +44,11 @@
         <input id="Mutationchance" value="50" type="number" min="0" max="100">
     </div>
     <canvas id="canvasGeneticAlg" style=" margin-top: 25px;"></canvas>
-    <h1>Ant Simulation</h1>
+    <h1>Ant Alghorithm</h1>
+    <div id="AntSSettings" class="mSettings">
+        <button onclick="CalculateAS()">Calculate</button>
+        <button onclick="clearAntS()">reset</button>
+    </div>
     <canvas id="canvasAntSimulation" style=" margin-top: 25px;"></canvas>
     <script type="text/javascript" src="GeneticAlgorithm.js"></script>
     <script type="text/javascript" src="AntSimulation.js"></script>
