--- a/TESTING.html
+++ b/TESTING.html
@@ -28,9 +28,10 @@
     <h1>Clastorization</h1>
     <div class="mSettings" id="settingsClastorization">
         <button onclick="clearClust()">clear</button>
-        <button onclick="KmeansC()">k means</button> K:
+        <button onclick="KmeansC()">k-means</button> K:
         <input id="Kvalue" value="3" type="number" min="1">
         <button onclick="Hierarhic()">Hierarhic</button>
+        <input id="HierarhKoef" value="173" type="range" min="150" max="700">
     </div>
     <canvas id="canvasClastorization" style=" margin-top: 25px;">
 </canvas>
