--- a/TESTING.html
+++ b/TESTING.html
@@ -8,34 +8,34 @@
 </head>
 
 <body>
-    <header id="H"> header</header>
-    <h1>A*</h1>
+    <header id="H"> <a href="#AA">A*</a> &emsp; <a href="#Clustorization">   Clustorization</a>&emsp;<a href="#GA">  Genetic Alghorithm </a>&emsp;<a href="#AntA">   Ant Alghorithm </a></header>
+    <h1 id="AA">A*</h1>
     <div class="mSettings" id="settingsA">
         N:
         <input id="nA" value="10" type="number" max="100" min="2">
         <button onclick="paintingA()">create empty labyrinth/clear labirinth</button>
-        <!--<button onclick="clearA()">clear</button>  -->
         <button onclick="clickedA('startA')">start point</button>
         <button onclick="clickedA('finishA')">finish point</button>
         <button onclick="clickedA('impassable')">impassable point</button>
         <button onclick="searchA()">search path</button>
-        <button onclick="generation()">generate labirinth</button>
+        <button onclick="generationF()">generate labirinth 1-st v</button>
+        <button onclick="generationS()">generate labirinth 2-nd v</button>
         <button onclick="getTimeDelayA()">set TimeDelay</button>:
         <input id="timeDelay" value="1" type="number" min="1">
     </div>
     <canvas id="canvasA" style=" margin-top: 10px;">
     </canvas>
-    <h1>Clastorization</h1>
+    <h1 id="Clustorization">Clustorization</h1>
     <div class="mSettings" id="settingsClastorization">
         <button onclick="clearClust()">clear</button>
         <button onclick="KmeansC()">k-means</button> K:
         <input id="Kvalue" value="3" type="number" min="1">
         <button onclick="Hierarhic()">Hierarhic</button>
-        <input id="HierarhKoef" value="173" type="range" min="150" max="700">
+        <input id="HierarhKoef" value="455" type="range" min="150" max="700">
     </div>
     <canvas id="canvasClastorization" style=" margin-top: 25px;">
 </canvas>
-    <h1>Genetic Algorithm</h1>
+    <h1 id="GA">Genetic Algorithm</h1>
     <div id="GeneticSettings" class="mSettings">
         <button onclick="clearGeneticGA()">reset</button>
         <button onclick="CalculateGA()">Calculate</button> generationCount:
@@ -44,7 +44,7 @@
         <input id="Mutationchance" value="50" type="number" min="0" max="100">
     </div>
     <canvas id="canvasGeneticAlg" style=" margin-top: 25px;"></canvas>
-    <h1>Ant Alghorithm</h1>
+    <h1 id="AntA">Ant Alghorithm</h1>
     <div id="AntSSettings" class="mSettings">
         <button onclick="CalculateAS()">Calculate</button>
         <button onclick="clearAntS()">reset</button>
@@ -64,7 +64,7 @@
     <script type="text/javascript" src="AntSimulation.js"></script>
     <script type="text/javascript" src="Jtest_body.js"></script>
     <script type="text/javascript" src="Clastorization.js"></script>
-    <footer>footer</footer>
+    <footer> <a href="#AA">A*</a> &emsp; <a href="#Clustorization">   Clustorization</a>&emsp;<a href="#GA">  Genetic Alghorithm </a>&emsp;<a href="#AntA"> Ant Alghorithm </a></footer>
 </body>
 
 </html>
